crates/elp/src/resources/test/parse_error/eqwalize_parse_error_a_reference_bad.pretty
error: parse_error
  ┌─ parse_error_a/src/parse_error_a_bad.erl:6:1
  │
6 │ foon() -> ok. % head-mismatch
  │ ^^^^^^^^^^^^ head mismatch

